--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
   "scripts": {
     "prebuild": "npm run type-check",
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --host 0.0.0.0 --port 8000",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css}'",
     "start": "npm run develop",
-    "serve": "gatsby serve",
+    "serve": "gatsby serve --host 0.0.0.0 --port 9000",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
