--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "author": "Andy Kenward <hello@andykenward.com>",
   "dependencies": {
     "@babel/core": "7.6.4",
+    "bulma": "^0.9.0",
     "gatsby": "2.15.36",
     "gatsby-image": "2.2.29",
     "gatsby-plugin-extract-schema": "0.0.5",
     "gatsby-plugin-manifest": "2.2.23",
     "gatsby-plugin-offline": "3.0.16",
     "gatsby-plugin-react-helmet": "3.1.13",
+    "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "2.2.32",
     "gatsby-plugin-typescript": "2.1.15",
     "gatsby-source-filesystem": "2.1.33",
     "gatsby-transformer-sharp": "2.2.23",
     "graphql": "14.5.8",
+    "node-sass": "^4.14.1",
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2",
