--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/core": "7.6.4",
     "bulma": "^0.9.0",
+    "bulmaswatch": "^0.8.1",
     "gatsby": "2.15.36",
     "gatsby-image": "2.2.29",
     "gatsby-plugin-extract-schema": "0.0.5",
