--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "react-helmet": "5.2.1",
-    "ts-optchain": "0.1.8"
+    "ts-optchain": "0.1.8",
+    "typeface-muli": "^1.1.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.8.2",
