--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "react-helmet": "5.2.1",
+    "react-icons": "^3.10.0",
     "ts-optchain": "0.1.8",
     "typeface-muli": "^1.1.3"
   },
