--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "2.2.32",
     "gatsby-plugin-typescript": "2.1.15",
-    "gatsby-source-filesystem": "2.1.33",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-remark": "^2.8.15",
     "gatsby-transformer-sharp": "2.2.23",
     "graphql": "14.5.8",
     "node-sass": "^4.14.1",
