--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "7.6.4",
     "bulma": "^0.9.0",
     "bulmaswatch": "^0.8.1",
+    "eslint-plugin-graphql": "^4.0.0",
     "gatsby": "2.15.36",
     "gatsby-image": "2.2.29",
     "gatsby-plugin-extract-schema": "0.0.5",
