--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "gatsby-plugin-sharp": "2.2.32",
     "gatsby-plugin-typescript": "2.1.15",
     "gatsby-remark-images": "^3.3.10",
+    "gatsby-remark-prismjs": "^3.5.11",
     "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-remark": "^2.8.15",
+    "gatsby-transformer-remark": "^2.8.30",
     "gatsby-transformer-sharp": "2.2.23",
     "graphql": "14.5.8",
     "node-sass": "^4.14.1",
+    "prismjs": "^1.21.0",
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2",
