--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-image": "2.2.29",
     "gatsby-plugin-extract-schema": "0.0.5",
     "gatsby-plugin-manifest": "2.2.23",
-    "gatsby-plugin-offline": "3.0.16",
+    "gatsby-plugin-offline": "^3.2.26",
     "gatsby-plugin-react-helmet": "3.1.13",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "2.2.32",
