--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bulma": "^0.9.0",
     "bulmaswatch": "^0.8.1",
     "eslint-plugin-graphql": "^4.0.0",
-    "gatsby": "2.15.36",
+    "gatsby": "^2.24.80",
     "gatsby-image": "2.2.29",
     "gatsby-plugin-extract-schema": "0.0.5",
     "gatsby-plugin-manifest": "2.2.23",
