--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/react-dom": "16.9.2",
     "@types/react-helmet": "5.0.12",
     "prettier": "1.18.2",
-    "typescript": "3.6.4"
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "gatsby",
