--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,5 +26,6 @@ jobs:
       - name: npm install, build, codegen, type-check and test
         run: |
           npm install
+          npm run build --if-present
         env:
           CI: true
