--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,9 +23,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, codegen, type-check and test
+      - name: yarn install, build, codegen, type-check and test
         run: |
-          npm install
-          npm run build --if-present
+          yarn install
+          yarn build
         env:
           CI: true
