--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     build:
       context: .devcontainer
       dockerfile: Dockerfile
-    env_file: .env
+      args:
+        # Update 'VARIANT' to pick a Node version: 10, 12, 14
+        VARIANT: 14
     command: sleep infinity
+    env_file:
+      - .env
     ports:
       - 8000:8000
       - 9000:9000
     volumes:
       - ./:/workspace
-      - webapp-vscode-server:/root/.vscode-server
-
-volumes:
-  webapp-vscode-server:
