--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Andy Kenward <hello@andykenward.com>",
   "dependencies": {
+    "bulma": "^0.9.2",
+    "bulmaswatch": "^0.8.1",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-extract-schema": "^0.0.5",
