--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-sass": "^4.4.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
+    "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
