--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "typeface-muli": "^1.1.13"
   },
   "devDependencies": {
