--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sass": "^4.4.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^2.5.15",
     "node-sass": "^5.0.0",
     "prismjs": "^1.23.0",
