--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@graphql-codegen/typescript": "^1.17.9",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-scroll": "^1.8.2",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
