--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-scroll": "^1.8.2",
+    "babel-eslint": "^10.1.0",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
