--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default-typescript",
+  "name": "anasdidi-dev",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Andy Kenward <hello@andykenward.com>",
+  "description": "My personal blog developed using Gatsby and TypeScript",
+  "version": "2.0.0",
+  "author": "Anas Juwaidi <anas.didi95@gmail.com>",
   "dependencies": {
     "bulma": "^0.9.2",
     "bulmaswatch": "^0.8.1",
