--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby-plugin-offline": "^4.5.0",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sass": "^4.4.0",
     "gatsby-plugin-sharp": "^2.6.36",
