ADD: Update devcontainer
Set docker-compose volume with ACCESS_MODE :z.
This for SELinux option to fix permission denied when starting
docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
       context: .devcontainer
       dockerfile: Dockerfile
       args:
-        # Update 'VARIANT' to pick a Node version: 10, 12, 14
-        VARIANT: 14
+        # Update 'VARIANT' to pick a Node version: 18, 16, 14.
+        # Append -bullseye or -buster to pin to an OS version.
+        # Use -bullseye variants on local on arm64/Apple Silicon.
+        VARIANT: 16-bullseye
     command: sleep infinity
     ports:
       - 8000:8000
       - 9000:9000
     volumes:
-      - ./:/workspace
-      - .vscode-server/:/home/node/.vscode-server
+      - ./:/workspace:z
+      - .vscode-server/:/home/node/.vscode-server:z
