--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,14 +20,7 @@
 	// "postCreateCommand": "yarn install",
 
 	// Configure tool-specific properties.
-	"customizations": {
-    "vscode": {
-      "extensions": [
-          "dbaeumer.vscode-eslint",
-          "ms-vscode.vscode-typescript-tslint-plugin"
-      ]
-    }
-  },
+	"customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "node"
