--- a/blog/.gitignore
+++ b/blog/.gitignore
@@ -1,8 +1,3 @@
-*.bak
-gatsby-starter-default-typescript/
-.vscode-server/
-.npm/
-
 # Logs
 logs
 *.log
@@ -56,8 +51,8 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
-# dotenv environment variables file
-.env
+# dotenv environment variable files
+.env*
 
 # gatsby files
 .cache/
