--- a/blog/package.json
+++ b/blog/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.0.4",
     "@fontsource/merriweather": "^5.0.3",
+    "bulma": "^0.9.4",
+    "bulmaswatch": "^0.8.1",
     "gatsby": "^5.12.1",
     "gatsby-plugin-feed": "^5.12.0",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-sass": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-remark-images": "^7.12.0",
     "gatsby-remark-prismjs": "^7.12.0",
@@ -23,7 +26,9 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "sass": "^1.66.1",
+    "typeface-muli": "^1.1.13"
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
