--- a/blog/package.json
+++ b/blog/package.json
@@ -27,6 +27,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
     "sass": "^1.66.1",
     "typeface-muli": "^1.1.13"
   },
