--- a/blog/package.json
+++ b/blog/package.json
@@ -28,10 +28,12 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.11.0",
+    "react-scroll": "^1.8.9",
     "sass": "^1.66.1",
     "typeface-muli": "^1.1.13"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "eslint-config-react-app": "^7.0.1",
     "prettier": "^2.8.8"
   },
