--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-*.bak
-gatsby-starter-default-typescript/
 .vscode-server/
 .npm/
+src/gatsby-types.d.ts
 
 # Logs
 logs
@@ -56,8 +55,8 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
-# dotenv environment variables file
-.env
+# dotenv environment variable files
+.env*
 
 # gatsby files
 .cache/
