--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,6 @@ jobs:
       - name: npm install, build
         run: |
           npm install
-          npm build
+          npm run build
         env:
           CI: true
