--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.0.4",
+    "@fontsource/lato": "^5.0.12",
     "@fontsource/merriweather": "^5.0.3",
     "bulma": "^0.9.4",
     "bulmaswatch": "^0.8.1",
